apps/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  selector:
    app: searxng
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
